{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 87,
  "lineage": "f131a5b3-b149-8843-b5d5-e32fa64d0d35",
  "resources": [
    {
      "module": "module.ec2_mod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_vm",
      "provider": "module.ec2_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:874021699381:instance/i-0cd112ea2b607c38d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd112ea2b607c38d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d928764bbb26461",
            "private_dns": "ip-10-0-6-158.eu-west-1.compute.internal",
            "private_ip": "10.0.6.158",
            "public_ip": "54.154.101.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-045c2266addd3618b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05420528318175a87",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00034a43f6b3bf584"
            ]
          },
          "dependencies": [
            "module.ec2_mod.aws_key_pair.key_pair",
            "module.vpc_mod.aws_security_group.instance_sg",
            "module.vpc_mod.aws_subnet.public_subnet",
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:internet-gateway/igw-05fd2c7aa098d2038",
            "id": "igw-05fd2c7aa098d2038",
            "owner_id": "874021699381",
            "vpc_id": "vpc-03b0cff6e525479f6"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d83667465aaa0d19",
            "owner_id": "874021699381",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fd2c7aa098d2038",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-03b0cff6e525479f6"
          },
          "dependencies": [
            "module.vpc_mod.aws_internet_gateway.igw",
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0901b67ab703d4526",
            "route_table_id": "rtb-0d83667465aaa0d19",
            "subnet_id": "subnet-008ad48858577bbbf"
          },
          "dependencies": [
            "module.vpc_mod.aws_internet_gateway.igw",
            "module.vpc_mod.aws_route_table.route_table",
            "module.vpc_mod.aws_subnet.private_subnet",
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a737b12f9f56df9a",
            "route_table_id": "rtb-0d83667465aaa0d19",
            "subnet_id": "subnet-05420528318175a87"
          },
          "dependencies": [
            "module.vpc_mod.aws_internet_gateway.igw",
            "module.vpc_mod.aws_route_table.route_table",
            "module.vpc_mod.aws_subnet.public_subnet",
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:security-group/sg-00034a43f6b3bf584",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00034a43f6b3bf584",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "874021699381",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03b0cff6e525479f6"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:subnet/subnet-008ad48858577bbbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-008ad48858577bbbf",
            "map_public_ip_on_launch": true,
            "owner_id": "874021699381",
            "tags": {
              "kubernetes.io/cluster/eks_cluster": "shared"
            },
            "vpc_id": "vpc-03b0cff6e525479f6"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:subnet/subnet-05420528318175a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-05420528318175a87",
            "map_public_ip_on_launch": true,
            "owner_id": "874021699381",
            "tags": {
              "kubernetes.io/cluster/eks_cluster": "shared"
            },
            "vpc_id": "vpc-03b0cff6e525479f6"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:vpc/vpc-03b0cff6e525479f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1b5f6f400b14425",
            "default_route_table_id": "rtb-013e74200c49011fe",
            "default_security_group_id": "sg-012423a981a58096e",
            "dhcp_options_id": "dopt-69bc870f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03b0cff6e525479f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013e74200c49011fe",
            "owner_id": "874021699381"
          }
        }
      ]
    }
  ]
}